--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -19,6 +19,9 @@
   <ItemGroup>
     <None Include="DinoGame.inc" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="terrain.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4164AA65-1EF9-4E69-899B-D1BED776070B}</ProjectGuid>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
