Skeleton of scorekeeping system. Now just need to be able to calculate score by calculating difference between end and start and account for reset.

--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <MASM Include="DinoGame.asm" />
     <MASM Include="ConsoleSizeMgmt.asm" />
+    <MASM Include="Score.asm" />
     <MASM Include="Screen.asm" />
     <MASM Include="Terrain.asm" />
     <MASM Include="Utilities.asm" />
