--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <MASM Include="DinoGame.asm" />
     <MASM Include="ConsoleSizeMgmt.asm" />
+    <MASM Include="Physics.asm" />
     <MASM Include="Score.asm" />
     <MASM Include="Screen.asm" />
     <MASM Include="Terrain.asm" />
