Refactoring. Primary accomplishment is refactoring the user input system, taking it out of the main script.

--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -18,6 +18,7 @@
     <MASM Include="Score.asm" />
     <MASM Include="Screen.asm" />
     <MASM Include="Terrain.asm" />
+    <MASM Include="UserInput.asm" />
     <MASM Include="Utilities.asm" />
   </ItemGroup>
   <ItemGroup>
