--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -15,7 +15,7 @@
     <MASM Include="DinoGame.asm" />
     <MASM Include="ConsoleSizeMgmt.asm" />
     <MASM Include="Physics.asm" />
-    <MASM Include="PostTickDelay.asm" />
+    <MASM Include="TickDelay.asm" />
     <MASM Include="Score.asm" />
     <MASM Include="Screen.asm" />
     <MASM Include="Terrain.asm" />
