Add the ability to increase timer resolution using the Windows Multimedia library

--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -69,7 +69,7 @@
       <UseSafeExceptionHandlers>false</UseSafeExceptionHandlers>
     </MASM>
     <Link>
-      <AdditionalDependencies>user32.lib;irvine32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;irvine32.lib;WinMM.Lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>c:\Irvine;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
